trunk/Archive/f85bebc168823df4a8311f12385374d3-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:35: error: size of variable ‘data’ is too large
     std::array<int, uint64_t(-1)> data;
                                   ^
